RESOLVED FIXED 83929
Fix pixelSnapping for CalendarPicker, MediaControl and ScrollbarPart
https://bugs.webkit.org/show_bug.cgi?id=83929
Summary Fix pixelSnapping for CalendarPicker, MediaControl and ScrollbarPart
Emil A Eklund
Reported 2012-04-13 12:17:15 PDT
Fix pixelSnapping for CalendarPicker, MediaControl and ScrollbarPart in preparation for turning on subpixel support.
Attachments
Patch (4.16 KB, patch)
2012-04-13 12:25 PDT, Emil A Eklund
no flags
Patch (3.18 KB, patch)
2012-04-14 18:45 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-04-13 12:25:51 PDT
Julien Chaffraix
Comment 2 2012-04-13 15:26:19 PDT
Comment on attachment 137124 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137124&action=review > Source/WebCore/ChangeLog:22 > + * rendering/RenderWidget.cpp: > + (WebCore::RenderWidget::updateWidgetGeometry): Mhhh, left-over from another change? (RenderWidget is not marked in the bug description and should if you are also planning to change it) > Source/WebCore/rendering/RenderWidget.cpp:183 > - LayoutRect contentBox = contentBoxRect(); > + IntRect contentBox = pixelSnappedIntRect(contentBoxRect()); > if (!m_widget->transformsAffectFrameRect()) > return setWidgetGeometry(absoluteContentBox()); > > - LayoutRect absoluteContentBox(localToAbsoluteQuad(FloatQuad(contentBox)).boundingBox()); > + IntRect absoluteContentBox(localToAbsoluteQuad(FloatQuad(contentBox)).boundingBox()); I think this is only a partial change: RenderWidget::setWidgetGeometry still takes a LayoutRect and it shouldn't now that you are always passing an IntRect.
Emil A Eklund
Comment 3 2012-04-14 18:45:51 PDT
Eric Seidel (no email)
Comment 4 2012-04-14 20:15:19 PDT
Comment on attachment 137223 [details] Patch OK.
WebKit Review Bot
Comment 5 2012-04-14 20:51:40 PDT
Comment on attachment 137223 [details] Patch Clearing flags on attachment: 137223 Committed r114211: <http://trac.webkit.org/changeset/114211>
WebKit Review Bot
Comment 6 2012-04-14 20:51:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.