Fix pixelSnapping for CalendarPicker, MediaControl and ScrollbarPart https://bugs.webkit.org/show_bug.cgi?id=83929

Reviewed by Eric Seidel.

Update CalendarPickerElement and MediaControlElements to use
pixelSnappedSize in preparation for turning on subpixel support.
Update RenderScrollbarPart to pixel snap rect before painting to ensure
that it is painted on device pixel boundaries.

No new tests, no change in functionality.

* html/shadow/CalendarPickerElement.cpp:
(WebCore::CalendarPickerElement::openPopup):
* html/shadow/MediaControlElements.cpp:
(WebCore::RenderMediaVolumeSliderContainer::layout):
* rendering/RenderScrollbarPart.cpp:
(WebCore::RenderScrollbarPart::paintIntoRect):


Canonical link: https://commits.webkit.org/101487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114211 268f45cc-cd09-0410-ab3c-d52691b4dbfc